--- a/style.css
+++ b/style.css
@@ -146,3 +146,11 @@ input::placeholder{
     font-family: sans-serif;
 }
 
+@media screen and (min-width: 300px) and (max-width: 768px) {
+
+.container{
+    left: 0;
+}
+
+
+}
