--- a/style.css
+++ b/style.css
@@ -7,14 +7,15 @@ body {
 
 
 .container {
-    width: 30em;
+    width: 32em;
     height: 34em;
     border-radius: 20px;
     position: relative;
     top: 2em;
-    left: 32%;
+    left: 30%;
     outline: 3px solid rgb(148, 196, 196);
     box-shadow: 15px 15px 10px 5px rgba(0,0,0,0.3);
+    
     
 
 }
@@ -24,14 +25,16 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    
+    
 }
 
 .conteudo input {
     padding: 1em;
     text-align: center;
-    position: relative;
-    top: 8em;
-    right: 14.5em;
+    position: absolute;
+    top: 12em;
+    right: 12.5em;
     border-radius: 15px;
     border: none;
     background-image: linear-gradient(to right, rgb(122, 196, 138), rgb(80, 161, 144), rgb(68, 104, 151));
@@ -45,16 +48,18 @@ input::placeholder{
 }
 
 .conteudo select {
-    position: relative;
+    position: absolute;
+    width: 30em;
+    height: 3em;
     bottom: 1em;
-    left: 7.2em;
-    top: 2em;
+    left: 4em;
+    top: 6em;
     padding: 2%;
     text-align: center;
     border-radius: 15px;
     border: none;
     outline: none;
-    background-color: whitesmoke;
+    background-color: rgb(221, 216, 216);
     font-style: italic;
     color: black;
     
@@ -73,9 +78,9 @@ input::placeholder{
 }
 
 .container button{
-    position: relative;
-    top: 11em;
-    left: 15em;
+    position: absolute;
+    top: 18em;
+    left: 15.5em;
   border: none;
   padding: 4px;
   cursor: pointer;
@@ -95,9 +100,9 @@ input::placeholder{
 .moeda-gringa {
     width: 220px;
     height: 150px;
-    position: relative;
-    right: 2em;
-    top: 12.5em;
+    position: absolute;
+    right: 18.5em;
+    top: 23em;
     border-radius: 15px;
 }
 
@@ -106,8 +111,9 @@ input::placeholder{
  align-items: center;
  justify-content: center;
  font-size: 25px;
- position: relative;
- top: 0.8em;   
+ position: absolute;
+ top: 2.8em;
+ left: 1em;   
 }
 
 .moeda-gringa p {
@@ -121,9 +127,9 @@ input::placeholder{
 .moeda-br{
     width: 220px;
     height: 150px;
-    position: relative;
+    position: absolute;
     left: 15.2em;
-    top: 2.1em;
+    top: 22.9em;
     bottom: 5em;
     border-radius: 15px;
 }
@@ -133,8 +139,9 @@ input::placeholder{
  align-items: center;
  justify-content: center;
  font-size: 25px;
- position: relative;
- top: 0.2em;  
+ position: absolute;
+ top: 2.8em;
+ left: 2.2em;  
 }
 
 .moeda-br p {
@@ -150,7 +157,6 @@ input::placeholder{
 
 .container{
     left: 0;
-    /* width: 98%; */
 
     
 }
